--- a/website/p/index.html
+++ b/website/p/index.html
@@ -230,9 +230,11 @@ html, body, .row-offcanvas {
     <script src="controllers/portal.js"></script>
     <script src="router/portal.js"></script>
     <script src="controllers/map.js"></script>
+    <script src="controllers/profile.js"></script>
     <script src="services/map.js"></script>
     <script src="services/requests.js"></script>
     <script src="services/session.js"></script>
+    <script src="services/profile.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.20.1/ol.js"></script>
 </body>
 
