Works on Bucket Functionality

--- a/website/p/index.html
+++ b/website/p/index.html
@@ -232,6 +232,7 @@ html, body, .row-offcanvas {
     <script src="router/portal.js"></script>
     <script src="controllers/map.js"></script>
     <script src="controllers/profile.js"></script>
+    <script src="controllers/bucket.js"></script>
     <script src="services/map.js"></script>
     <script src="services/requests.js"></script>
     <script src="services/session.js"></script>
