Working on attraction preview

--- a/website/p/index.html
+++ b/website/p/index.html
@@ -87,6 +87,7 @@
       <script src="controllers/profile.js"></script>
       <script src="controllers/bucket.js"></script>
       <script src="services/map.js"></script>
+      <script src="services/geo.js"></script>
       <script src="services/requests.js"></script>
       <script src="services/session.js"></script>
       <script src="services/profile.js"></script>
