Implemented Planner functionality

--- a/website/p/index.html
+++ b/website/p/index.html
@@ -87,6 +87,8 @@
       <script src="controllers/profile.js"></script>
       <script src="controllers/bucket.js"></script>
       <script src="services/map.js"></script>
+      <script src="services/attraction.js"></script>
+      <script src="services/reviews.js"></script>
       <script src="services/geo.js"></script>
       <script src="services/requests.js"></script>
       <script src="services/session.js"></script>
