--- a/website/p/index.html
+++ b/website/p/index.html
@@ -15,6 +15,7 @@
       <link rel="stylesheet" href="css/bucket.css">
       <link rel="stylesheet" href="css/profile.css">
       <link rel="stylesheet" href="css/nav.css">
+      <link rel="stylesheet" href="css/itenary.css">
    </head>
    <body ng-controller="GlobalCtrl">
        
@@ -47,8 +48,22 @@
                      <li class="dropdown" tooltip-placement="bottom" uib-tooltip="Messages">
                         <a href="#/" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-comments-o" aria-hidden="true"></i></a>
                      </li>
-                     <li class="dropdown" tooltip-placement="bottom" uib-tooltip="Alerts">
-                        <a href="#/" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell-o" aria-hidden="true"></i></a>
+                     <li class="dropdown" tooltip-placement="bottom" uib-tooltip="Alerts" uib-dropdown>
+                        <a href="#/" class="dropdown-toggle" data-toggle="dropdown" uib-dropdown-toggle><i class="fa fa-bell-o" aria-hidden="true">
+                            <div ng-if="alertsCount > 0" style="position: absolute; background: red; height: 15px; width: 15px; bottom: 8px; right: 8px; text-align: center; color: white; line-height: 15px; font-size: 10px;">{{alertsCount}}</div>
+                            </i></a>
+                            <ul class="dropdown-menu" uib-dropdown-menu role="alertsDpwn" aria-labelledby="single-button" style="width: 250px">
+                                <div class="list-group">
+                                    <a href="#" class="list-group-item active" ng-repeat="alert in alertDetails">
+                                        <h4 class="list-group-item-heading">{{alert.name}} <span class="badge">New</span></h4>
+                                        <p class="list-group-item-text">...</p>
+                                    </a>
+                                    <a href="#" class="list-group-item">Morbi leo risus</a>
+                                    <a href="#" class="list-group-item">Porta ac consectetur ac</a>
+                                    <a href="#" class="list-group-item">Vestibulum at eros</a>
+                                </div>                              
+
+                            </ul>
                      </li>
                      <li class="dropdown" tooltip-placement="bottom" uib-tooltip="Buckets/Goals">
                         <a href="#/bucket" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-list-alt" aria-hidden="true"></i></a>
