Implementing organization panel

--- a/website/p/index.html
+++ b/website/p/index.html
@@ -74,7 +74,7 @@
                             <li role="menuitem"><a href="#/profile/{{user._id}}">My Profile</a></li>
                             <li role="menuitem"><a href="#">Settings</a></li>
                             <li class="divider"></li>
-                            <li role="menuitem"><a href="#">Organization</a></li>
+                            <li role="menuitem"><a href="#/panel">Organization</a></li>
                             <li role="menuitem"><a href="#">Logout</a></li>
                         </ul>
                      </li>
@@ -96,11 +96,13 @@
          </ul>
       </script>
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular-animate.min.js"></script>
       <script src="controllers/portal.js"></script>
       <script src="router/portal.js"></script>
       <script src="controllers/map.js"></script>
       <script src="controllers/profile.js"></script>
       <script src="controllers/bucket.js"></script>
+      <script src="controllers/panel.js"></script>
       <script src="services/map.js"></script>
       <script src="services/attraction.js"></script>
       <script src="services/reviews.js"></script>
