--- a/website/p/index.html
+++ b/website/p/index.html
@@ -111,5 +111,7 @@
       <script src="services/session.js"></script>
       <script src="services/profile.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.20.1/ol.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+      <script src="libs/angular-chart.min.js"></script>
    </body>
 </html>
