Like/Unlike System Further extension of Buckets Ability to remove offers Improvements to HTML Design and Services/Controllers

--- a/website/p/index.html
+++ b/website/p/index.html
@@ -105,6 +105,7 @@
       <script src="controllers/panel.js"></script>
       <script src="services/map.js"></script>
       <script src="services/attraction.js"></script>
+      <script src="services/tool.js"></script>
       <script src="services/reviews.js"></script>
       <script src="services/geo.js"></script>
       <script src="services/requests.js"></script>
