--- a/website/p/index.html
+++ b/website/p/index.html
@@ -92,8 +92,7 @@
         <form ng-app="fileUpload" name="form">
         Single Image with validations
         <div class="button" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'"
-            ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100"
-            ngf-resize="{width: 100, height: 100}">Select</div>
+            ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100">Select</div>
         Multiple files
         <div class="button" ngf-select ng-model="files" ngf-multiple="true">Select</div>
         Drop files: <div ngf-drop ng-model="files" class="drop-box">Drop</div>
@@ -144,6 +143,7 @@
       <script src="services/attraction.js"></script>
       <script src="services/tool.js"></script>
       <script src="services/reviews.js"></script>
+      <script src="services/routes.js"></script>
       <script src="services/geo.js"></script>
       <script src="services/requests.js"></script>
       <script src="services/session.js"></script>
