--- a/website/p/index.html
+++ b/website/p/index.html
@@ -18,7 +18,7 @@
       <link rel="stylesheet" href="css/itenary.css">
    </head>
    <body ng-controller="GlobalCtrl">
-       <div style="position: fixed; right: 0; bottom: 0; width: 20%;">
+       <div style="position: fixed; right: 0; bottom: 0; width: 20%; z-index: 99999;">
         <div ng-repeat="alert in alerts" class="oaerror {{alert.type}}" ng-init="removeAlert(alert)">
             <strong>{{alert.title}}</strong> - {{alert.message}}
           </div>
@@ -38,20 +38,9 @@
                </div>
                <!-- Collect the nav links, forms, and other content for toggling -->
                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                  <form class="navbar-form navbar-left" role="search">
-                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="search people, buckets and organizations">
-                        <span class="input-group-btn">
-                        <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
-                        </span>
-                     </div>
-                  </form>
                   <ul class="nav navbar-nav navbar-right" style="font-size: 16px">
                      <li class="dropdown" tooltip-placement="bottom" uib-tooltip="Planner">
                         <a href="#/planner" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-map-o" aria-hidden="true"></i></a>
-                     </li>
-                     <li class="dropdown" tooltip-placement="bottom" uib-tooltip="Messages">
-                        <a href="#/" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-comments-o" aria-hidden="true"></i></a>
                      </li>
                      <li class="dropdown" tooltip-placement="bottom" uib-tooltip="Alerts" uib-dropdown>
                         <a href="#/" class="dropdown-toggle" data-toggle="dropdown" uib-dropdown-toggle><i class="fa fa-bell-o" aria-hidden="true">
@@ -71,17 +60,16 @@
                      <li class="dropdown" tooltip-placement="bottom" uib-tooltip="Buckets/Goals">
                         <a href="#/bucket" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-list-alt" aria-hidden="true"></i></a>
                      </li>
-                     <li class="dropdown" tooltip-placement="bottom" uib-tooltip="Search Place By Image">
-                        <a href="javascript:void(0)" ng-click="revSearchDialog()" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-search" aria-hidden="true"></i></a>
+                     <li class="dropdown" tooltip-placement="bottom" uib-tooltip="User List">
+                        <a href="#/userList" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-users" aria-hidden="true"></i></a>
                      </li>
                      <li class="dropdown" uib-dropdown>
-                        <img ng-src="../uploads/profile/{{user.profile.photo}}" alt="..." class="img-circle" uib-dropdown-toggle style="height: 40px; width: 40px; margin-top: 5px;">
+                        <img ng-src="{{user.profile.photo ? '../uploads/profile/'+user.profile.photo : '../uploads/profile/default.png'}}" alt="..." class="img-circle" uib-dropdown-toggle style="height: 40px; width: 40px; margin-top: 5px;">
                         <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button" style="width: 100px">
                             <li role="menuitem"><a href="#/profile/{{user._id}}">My Profile</a></li>
                             <li role="menuitem"><a href="#/settings">Settings</a></li>
                             <li class="divider"></li>
                             <li role="menuitem"><a href="#/panel">My Places</a></li>
-                            <li role="menuitem"><a href="#/organization">My Organizations</a></li>
                             <li role="menuitem"><a href="#">Logout</a></li>
                         </ul>
                      </li>
@@ -111,8 +99,10 @@
       <!-- Angular Templates -->
       <script type="text/ng-template" id="filtersPopup.html">
          <ul class="checkboxes">
-             <li ng-repeat="filter in filters"><label><input type="checkbox" name="text2" value="value2" />{{filter}}</label></li>
+             <li ng-repeat="filter in filters"><label><input type="checkbox" name="text2" ng-model="selectedFilters[filter]" />{{filter}}</label></li>
          </ul>
+         <button type="submit" ng-click="filterResults()">Filter</button>
+         <button type="submit" ng-click="filterClear()">Clear Filters</button>
       </script>
 
       <script type="text/ng-template" id="previewOffer.html">
@@ -162,6 +152,7 @@
       <script src="controllers/bucket.js"></script>
       <script src="controllers/panel.js"></script>
       <script src="controllers/settings.js"></script>
+      <script src="controllers/admin.js"></script>
       <script src="services/map.js"></script>
       <script src="services/attraction.js"></script>
       <script src="services/tool.js"></script>
@@ -171,6 +162,7 @@
       <script src="services/requests.js"></script>
       <script src="services/session.js"></script>
       <script src="services/profile.js"></script>
+      <script src="controllers/userList.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.20.1/ol.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
       <script src="libs/angular-chart.min.js"></script>
